--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.33.0'
     implementation 'com.facebook.android:facebook-core:4.33.0'
+    implementation 'com.google.android.gms:play-services-ads:11.0.4'
+    implementation 'com.google.android.gms:play-services-base:11.0.4'
 }
 repositories {
     mavenCentral()
