--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -20,8 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 }
+
+ext {
+    currentFirebaseVersion = "11.8.0"
+}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -35,8 +39,12 @@ dependencies {
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.33.0'
     implementation 'com.facebook.android:facebook-core:4.33.0'
-    implementation 'com.google.android.gms:play-services-ads:11.0.4'
-    implementation 'com.google.android.gms:play-services-base:11.0.4'
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-base:11.8.0'
+
+    compileOnly("com.google.firebase:firebase-config:$currentFirebaseVersion") {
+        exclude group: 'org.json', module: 'json'
+    }
 }
 repositories {
     mavenCentral()
