--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 27
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 2
         versionName "1.1.0"
@@ -35,12 +35,33 @@ dependencies {
     implementation 'com.appsflyer:af-android-sdk:4.8.11@aar'
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.33.0'
+    implementation 'com.facebook.android:audience-network-sdk:4.99.3'
     implementation 'com.facebook.android:facebook-core:4.33.0'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.android.gms:play-services-base:15.0.1'
     implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
         transitive = true
     }
+
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.mopub.volley:mopub-volley:2.0.0'
+    implementation('com.mopub:mopub-sdk:5.3.0@aar') {
+        transitive = true
+    }
+    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
+
+    implementation 'com.facebook.android:audience-network-sdk:4.99.3'
+    implementation 'com.google.ads.mediation:facebook:4.99.3.0'
+
+    implementation 'com.unity3d.ads:unity-ads:2.3.0'
+    implementation 'com.google.ads.mediation:unity:2.3.0.0'
+
+    implementation('com.vungle:publisher-sdk-android:6.3.17@aar') {
+        transitive=true
+    }
+    implementation 'com.google.ads.mediation:vungle:6.3.17.0'
+
+    implementation (name:'SOMAAndroid-8.0.2-release', ext:'aar')
 }
 repositories {
     mavenCentral()
