--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.2.61'
     repositories {
         google()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
+        flatDir { dirs 'libs' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.+'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -21,6 +19,10 @@ allprojects {
         google()
         maven { url "https://maven.google.com" }
         jcenter()
+        maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
