--- a/afbilling/src/main/AndroidManifest.xml
+++ b/afbilling/src/main/AndroidManifest.xml
@@ -2,5 +2,7 @@
     package="com.appyfurious.afbilling">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.android.vending.BILLING" />
 </manifest>
