--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 apply plugin: 'realm-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
@@ -43,9 +44,10 @@ dependencies {
     implementation 'com.facebook.android:facebook-core:4.33.0'
     implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.android.gms:play-services-base:11.8.0'
-    implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
-        transitive = true
-    }
+
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+
     compileOnly("com.google.firebase:firebase-config:$currentFirebaseVersion") {
         exclude group: 'org.json', module: 'json'
     }
