--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,14 +27,14 @@ ext {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "com.android.support.constraint:constraint-layout:1.1.0"
-    compile (project(path: ':afbilling')) {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    compile(project(path: ':afbilling')) {
         transitive = true
         // Use the consuming application's FireBase module, so exclude it
         // from the dependency. (not totally necessary if you use compileOnly
@@ -43,7 +43,6 @@ dependencies {
         // Exclude the "plain java" json module to fix build warnings.
         exclude group: 'org.json', module: 'json'
     }
-
     implementation("com.google.firebase:firebase-config:$currentFirebaseVersion") {
         // Exclude the "plain java" json module to fix build warnings.
         exclude group: 'org.json', module: 'json'
