--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -55,14 +55,14 @@ dependencies {
 
     implementation "android.arch.lifecycle:extensions:1.1.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
-    kapt "android.arch.lifecycle:compiler:$project.archLifecycleVersion"
-    implementation "android.arch.lifecycle:livedata:$project.archLifecycleVersion"
+    kapt "android.arch.lifecycle:compiler:1.1.0"
+    implementation "android.arch.lifecycle:livedata:1.1.0"
 
 
     compileOnly("com.google.firebase:firebase-config:$currentFirebaseVersion") {
-        implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
-            transitive = true
-        }
+//        implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
+//            transitive = true
+//        }
         implementation "com.google.firebase:firebase-core:$currentFirebaseVersion"
         implementation("com.google.firebase:firebase-config:$currentFirebaseVersion") {
             exclude group: 'org.json', module: 'json'
@@ -108,4 +108,5 @@ dependencies {
         implementation 'com.google.ads.mediation:vungle:6.3.17.0'
 
     }
+
 }
