--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -60,9 +60,9 @@ dependencies {
 
 
     compileOnly("com.google.firebase:firebase-config:$currentFirebaseVersion") {
-//        implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
-//            transitive = true
-//        }
+        implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
+            transitive = true
+        }
         implementation "com.google.firebase:firebase-core:$currentFirebaseVersion"
         implementation("com.google.firebase:firebase-config:$currentFirebaseVersion") {
             exclude group: 'org.json', module: 'json'
