--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'realm-android'
 apply plugin: 'kotlin-kapt'
 
 repositories {
+    google()
     jcenter()
     maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
     maven { url 'https://maven.google.com' }
@@ -39,8 +40,7 @@ ext {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -52,13 +52,10 @@ dependencies {
     implementation 'com.facebook.android:facebook-core:4.33.0'
     implementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.android.gms:play-services-base:11.8.0'
-
-    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     kapt "android.arch.lifecycle:compiler:1.1.0"
-    implementation "android.arch.lifecycle:livedata:1.1.0"
-
-
+    implementation 'android.arch.lifecycle:livedata:1.1.0'
     compileOnly("com.google.firebase:firebase-config:$currentFirebaseVersion") {
 //        implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
 //            transitive = true
@@ -67,46 +64,46 @@ dependencies {
         implementation("com.google.firebase:firebase-config:$currentFirebaseVersion") {
             exclude group: 'org.json', module: 'json'
         }
-
-//    /**
-//     *  MoPub
-//     */
-//
-//    implementation 'com.android.support:support-v4:27.1.1'
-//    implementation 'com.mopub.volley:mopub-volley:2.0.0'
-//    implementation('com.mopub:mopub-sdk:5.3.0@aar') {
-//        transitive = true
-//    }
-//
-//    implementation 'com.moat.analytics.mobile.mpub:moat-mobile-app-kit:2.4.5'
-//
-//    implementation ('com.mopub:mopub-sdk-base:5.3.0')
-//
-//    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
-
-        /**
-         *  Facebook
-         */
-
-        implementation 'com.facebook.android:audience-network-sdk:4.99.3'
-        implementation 'com.google.ads.mediation:facebook:4.99.3.0'
-
-        /**
-         *  Unity
-         */
-
-        implementation 'com.unity3d.ads:unity-ads:2.3.0'
-        implementation 'com.google.ads.mediation:unity:2.3.0.0'
-
-        /**
-         *  Vungle
-         */
-
-        implementation('com.vungle:publisher-sdk-android:6.3.17@aar') {
-            transitive = true
-        }
-        implementation 'com.google.ads.mediation:vungle:6.3.17.0'
-
     }
+
+    /**
+     *  MoPub
+     */
+
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.mopub.volley:mopub-volley:2.0.0'
+    implementation('com.mopub:mopub-sdk:5.1.0@aar') {
+        transitive = true
+    }
+    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
+
+    /**
+     *  Facebook
+     */
+
+    implementation 'com.facebook.android:audience-network-sdk:4.99.3'
+    implementation 'com.google.ads.mediation:facebook:4.99.3.0'
+
+    /**
+     *  Unity
+     */
+
+    implementation 'com.unity3d.ads:unity-ads:2.3.0'
+    implementation 'com.google.ads.mediation:unity:2.3.0.0'
+
+    /**
+     *  Vungle
+     */
+
+    implementation('com.vungle:publisher-sdk-android:6.3.17@aar') {
+        transitive = true
+    }
+    implementation 'com.google.ads.mediation:vungle:6.3.17.0'
+
+    /**
+     *  Smaato
+     */
+
+    implementation project(':SOMAAndroid')
 
 }
