--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -7,7 +7,6 @@ apply plugin: 'kotlin-kapt'
 repositories {
     google()
     jcenter()
-    maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
     maven { url 'https://maven.google.com' }
     mavenCentral()
 }
@@ -68,16 +67,16 @@ dependencies {
         }
     }
 
-    /**
-     *  MoPub
-     */
-
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.mopub.volley:mopub-volley:2.0.0'
-    implementation('com.mopub:mopub-sdk:5.1.0@aar') {
-        transitive = true
-    }
-    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
+//    /**
+//     *  MoPub
+//     */
+//
+//    implementation 'com.android.support:support-v4:27.1.1'
+//    implementation 'com.mopub.volley:mopub-volley:2.0.0'
+//    implementation('com.mopub:mopub-sdk:5.1.0@aar') {
+//        transitive = true
+//    }
+//    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
 
     /**
      *  Facebook
@@ -106,6 +105,6 @@ dependencies {
      *  Smaato
      */
 
-    implementation project(':SOMAAndroid')
+   // implementation project(':SOMAAndroid')
 
 }
