--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
+        //maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
         maven { url "https://maven.google.com" }
         jcenter()
     }
