--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ allprojects {
         //maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
         maven { url "https://maven.google.com" }
         jcenter()
+        flatDir {
+            dirs project(':afbilling').file('libs')
+        }
     }
 }
 
