--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -18,7 +18,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 2
-        versionName "1.1.0"
+        versionName "1.0.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -74,7 +74,7 @@ dependencies {
 //     *  MoPub
 //     */
 //
-//    implementation 'com.android.support:support-v4:27.1.1'
+//    implementation "com.android.support:support-v4:$support_version"
 //    implementation 'com.mopub.volley:mopub-volley:2.0.0'
 //    implementation('com.mopub:mopub-sdk:5.1.0@aar') {
 //        transitive = true
