--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 android {
     compileSdkVersion 27
-
+    buildToolsVersion '27.0.3'
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 27
@@ -23,13 +23,17 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 ext {
@@ -58,10 +62,9 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     kapt "android.arch.lifecycle:compiler:1.1.0"
     implementation 'android.arch.lifecycle:livedata:1.1.0'
-    implementation("com.crashlytics.sdk.android:crashlytics:2.9.4@aar") {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
         transitive = true
     }
-
     compileOnly("com.google.firebase:firebase-config:$currentFirebaseVersion") {
 
         implementation "com.google.firebase:firebase-core:$currentFirebaseVersion"
@@ -69,45 +72,35 @@ dependencies {
             exclude group: 'org.json', module: 'json'
         }
     }
-
-//    /**
-//     *  MoPub
-//     */
-//
-//    implementation "com.android.support:support-v4:$support_version"
-//    implementation 'com.mopub.volley:mopub-volley:2.0.0'
-//    implementation('com.mopub:mopub-sdk:5.1.0@aar') {
-//        transitive = true
-//    }
-//    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
-
+    //    /**
+    //     *  MoPub
+    //     */
+    //
+    //    implementation "com.android.support:support-v4:$support_version"
+    //    implementation 'com.mopub.volley:mopub-volley:2.0.0'
+    //    implementation('com.mopub:mopub-sdk:5.1.0@aar') {
+    //        transitive = true
+    //    }
+    //    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
     /**
      *  Facebook
      */
-
     implementation 'com.facebook.android:audience-network-sdk:4.99.3'
     implementation 'com.google.ads.mediation:facebook:4.99.3.0'
-
     /**
      *  Unity
      */
-
     implementation 'com.unity3d.ads:unity-ads:2.3.0'
     implementation 'com.google.ads.mediation:unity:2.3.0.0'
-
     /**
      *  Vungle
      */
-
     implementation('com.vungle:publisher-sdk-android:6.3.17@aar') {
         transitive = true
     }
     implementation 'com.google.ads.mediation:vungle:6.3.17.0'
-
     /**
      *  Smaato
      */
-
-   // implementation project(':SOMAAndroid')
-
+    // implementation project(':SOMAAndroid')
 }
