--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -101,3 +101,17 @@ dependencies {
      */
     // implementation project(':SOMAAndroid')
 }
+
+/*
+group 'com.appyfurious'
+version '1.0.0'
+
+apply plugin: 'maven'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: uri('/Users/home/Documents/development/repository'))
+        }
+    }
+}*/
