--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -36,10 +36,6 @@ android {
 
 }
 
-ext {
-    currentFirebaseVersion = "11.8.0"
-}
-
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -56,8 +52,8 @@ dependencies {
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.33.0'
     implementation 'com.facebook.android:facebook-core:4.33.0'
-    implementation 'com.google.android.gms:play-services-ads:11.8.0'
-    implementation 'com.google.android.gms:play-services-base:11.8.0'
+    implementation 'com.google.android.gms:play-services-ads:16.0.0'
+    implementation 'com.google.android.gms:play-services-base:16.0.1'
     implementation 'android.arch.lifecycle:extensions:1.1.0'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     kapt "android.arch.lifecycle:compiler:1.1.0"
@@ -65,10 +61,17 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
         transitive = true
     }
-    implementation "com.google.firebase:firebase-core:$currentFirebaseVersion"
-    implementation("com.google.firebase:firebase-config:$currentFirebaseVersion") {
+    implementation "com.google.firebase:firebase-core:16.0.4"
+    implementation("com.google.firebase:firebase-config:16.0.0") {
         exclude group: 'org.json', module: 'json'
     }
+
+    /**
+     *  Appsee
+     */
+
+    implementation 'com.appsee:appsee-android:2.4.5'
+
     //    /**
     //     *  MoPub
     //     */
@@ -103,15 +106,15 @@ dependencies {
 }
 
 
-//group 'com.appyfurious'
-//version '1.0.0'
-//
-//apply plugin: 'maven'
-//
-//uploadArchives {
-//    repositories {
-//        mavenDeployer {
-//            repository(url: uri('/Users/olegappyfurious/repository'))
-//        }
-//    }
-//}
+group 'com.appyfurious'
+version '1.0.0'
+
+apply plugin: 'maven'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: uri('/Users/olegappyfurious/repository'))
+        }
+    }
+}
