--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation "com.google.firebase:firebase-core:16.0.4"
     implementation (project(path: ':afbilling')) {
         transitive = true
         // Use the consuming application's FireBase module, so exclude it
