--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -61,17 +61,14 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
         transitive = true
     }
-    implementation "com.google.firebase:firebase-core:16.0.4"
-    implementation("com.google.firebase:firebase-config:16.0.0") {
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation('com.google.firebase:firebase-config:16.0.0') {
         exclude group: 'org.json', module: 'json'
     }
-
     /**
      *  Appsee
      */
-
     implementation 'com.appsee:appsee-android:2.4.5'
-
     //    /**
     //     *  MoPub
     //     */
