--- a/afbilling/build.gradle
+++ b/afbilling/build.gradle
@@ -65,20 +65,23 @@ dependencies {
     implementation('com.google.firebase:firebase-config:16.0.0') {
         exclude group: 'org.json', module: 'json'
     }
+
     /**
      *  Appsee
      */
     implementation 'com.appsee:appsee-android:2.4.5'
-    //    /**
-    //     *  MoPub
-    //     */
-    //
-    //    implementation "com.android.support:support-v4:$support_version"
-    //    implementation 'com.mopub.volley:mopub-volley:2.0.0'
-    //    implementation('com.mopub:mopub-sdk:5.1.0@aar') {
-    //        transitive = true
-    //    }
-    //    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
+
+    /**
+     *  MoPub
+     */
+
+    implementation "com.android.support:support-v4:$support_version"
+    implementation 'com.mopub.volley:mopub-volley:2.0.0'
+    implementation('com.mopub:mopub-sdk:5.3.0@aar') {
+        transitive = true
+    }
+    implementation 'com.google.ads.mediation:mopub:5.3.0.1'
+
     /**
      *  Facebook
      */
